<resources>
    <string name="app_name">SOS Ciclista</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reportes">ReportesActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="facebook_app_id">292858978048673</string>
    <string name="fb_login_protocol_scheme">fb292858978048673</string>
    <string name="preferences">SOSCiclista</string>
    <string name="title_activity_serie_bici">SerieBiciActivity</string>
    <string name="title_activity_tips">TipsActivity</string>
    <string name="loginTitle">¿Qué pensarías si en caso de accidente vial te pagamos la reparación de tu bicicleta, te transladamos al bici-taller más cercano y te mandamos paramédico en motocicleta…?\nEsto y otros beneficios obtendrás con GRUPO GTT</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="beneficios">+Beneficios</string>
    <string name="contrata">Contrata</string>
    <string name="sesion_gtt">Ya tienes cuenta, inicia sesión</string>
    <string name="hint_user">Telefono</string>
    <string name="hint_pass">Número de folio de póliza</string>
    <string name="sos_ciclista">SOS Ciclista</string>
    <string name="nombre_titular">Nombre titular</string>
    <string name="hint_nombre_y_apellidos">Nombre y apellidos</string>
    <string name="y_o_segundo_titular">Y/o segundo titular (opcional) </string>
    <string name="direcci_n">Calle y número</string>
    <string name="calle_y_n_mero">Calle y número</string>
    <string name="c_p">C.P.</string>
    <string name="colonia">Colonia</string>
    <string name="alcald_a_o_municipio">Alcaldía o municipio</string>
    <string name="t_lefono">Télefono</string>
    <string name="_10_d_gitos">10 dígitos</string>
    <string name="correo">Correo</string>
    <string name="enviar_datos">Siguiente</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="_09_09_1990">dd/mm/yyyy</string>
    <string name="rfc">RFC</string>
    <string name="txt_home">Inicio</string>
    <string name="contact_text">Contácto</string>
    <string name="txt_acerca">Acerca de</string>
    <string name="txt_setting">Ajustes</string>
    <string name="txt_exit">Salir</string>
    <string name="dash_text_a">Beneficios al contratar asesoría y asistencia con grupo GTT</string>
    <string name="contacto_gtt">Para cualquier información o \n sugerencia contáctanos</string>
    <string name="mensjaegtt">Mensaje para Grupot GTT</string>
    <string name="comentarios">COMENTARIOS</string>
    <string name="porcontact">O CONTACTANOS POR</string>
    <string name="web_gtt">www.asistenciavialgtt.com</string>
    <string name="tel_gtt">5512077819</string>
    <string name="acercadetext">Es una administradora de\nriesgos en hechos de tránsito\nterrestres especializada en\naccidentes viales con más de \n16 años de experiencia</string>
    <string name="misi_n">MISIÓN</string>
    <string name="misiongtt">Satisfacer de manera efectiva y\neficiente las necesidades de\nnuestros clientes</string>
    <string name="visi_n">VISIÓN</string>
    <string name="visiongtt">Ser la empresa más reconocida\nen el país en proveer soluciones\nque satisfagan las necesidades\nde nuestros clientes.</string>
    <string name="valores">VALORES</string>
    <string name="valoresgtt">• Trabajo\n• Compromiso\n• Responsabilidad\n• Seguridad\n• Honradez\n• Liderazgo</string>
    <string name="misi_n_visi_n_valores">Misión / Visión / Valores</string>
    <string name="todo">LO QUE PUEDES HACER...</string>
    <string name="todo_a">Tenemos varias secciones las cuales\nte ayudarán a tomar acciones directas y\nrápidas en cuanto a robos y emergencias.</string>
    <string name="todo_b">El mapa te ayudará a encontrar el taller\nbici-mecánico más cercano en caso de\nemergencia en tu traslado.</string>
    <string name="averia_text_onb">Si necesitas refacciones o ayuda mecánica, pídela directamente a la comunidad ciclista. Haz el llamado en esta sección y el ciclista que anda por la zona podrá auxiliarte.</string>
    <string name="apoyo_text_onb">Utiliza esta sección cuando tengas cualquier percance con algún automovilista o autoridad y la comunidad ciclista llegará a apoyarte. También podrás convocar vallas ciclistas.</string>
    <string name="red_onb">En esta opción podrás reportar algún accidente no solo para ciclistas, si no en general. Esperemos que nunca lleguemos a utilizarlo.</string>
    <string name="gtt_onb_wel">Como plus en la app puedes contactar con SEGUROS GTT para ciclistas que abarcan asistencias jurídicas y médicas para el ciclista urbano.</string>
    <string name="finish_onb">Con estas herramientas estarás preparado para cualquier eventualidad, aprovecha cada una de ellas y cuidémonos entre todos, formemos comunidad y salgamos a las calles seguros y prevenidos.</string>
    <string name="readyset">¡AHORA ESTAS LISTO!</string>
    <string name="start_onb">En esta app encontrarás todas las herrameintas necesarias de reporte, prevención, auxilio y seguridad a la hora de salir en bicicleta. Juntos nos apoyamos, hagamos comunidad.</string>
    <string name="ciclviaonb">En caso de toparte con alguna ciclovía en mal estado o con algún automovilista obstruyendo, reportalá aquí para que otros ciclistas puedan tener cuidado.</string>
    <string name="validate_field_generic">Favor de llenar este campo correctamente.</string>
    <string name="launch_activity">Volver a la app</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="preference_file_key">com.bicisos.i7.bicisos.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No hay ubicación</string>
    <string name="stop_location_updates_button_text">Detener ubicación</string>
    <string name="ok">Ok</string>
    <string name="tokem">safd124214·$%·SWLD!="$SD!"$</string>


    <string-array name="onboarding_titles">
        <item>Perjuicios a la unidad</item>
        <item>Paramédico en motocicleta</item>
        <item>Asistencia legal</item>
        <item>Responsabilidad civil terceros</item>
        <item>Apoyo de gastos médicos y/o funerarios</item>
    </string-array>

    <string-array name="onboarding_descriptions">
        <item>En caso de accidente vial, te apoyamos con un monto de hasta $2,500.00 MXN, y en caso de ser necesario se trasladará al bici-tallermecánico más cercano. Aplica condiciones generales.</item>
        <item>En caso de accidente vial y de ser necesaria la asistencia, llegará un paramédico en moto para brindarte los primeros auxilios y evaluará la gravedad de la situación.</item>
        <item>Se enviará un asesor jurídico en caso de ser requerido por accidente vial, para asesorarte ante una autoridad competente.</item>
        <item>En caso de accidente vial, llegará un ajustador al lugar del accidente, si resultamos ser responsables, se extenderá un pase que cubra los daños por un monto de hasta $150,000.00 MXN.</item>
        <item>En caso de hospitalización y/o fallecimiento, te reembolsamos gastos hasta por un monto de $5,000.00 MXN</item>
    </string-array>

    <integer-array name="onboarding_imgs">
        <item>@drawable/gttonb1</item>
        <item>@drawable/gttonb2</item>
        <item>@drawable/gttonb3</item>
        <item>@drawable/gttonb4</item>
        <item>@drawable/gttonb5</item>
    </integer-array>

    <integer-array name="dash_gtt_images">
        <item>@drawable/dash_a</item>
        <item>@drawable/dash_b</item>
        <item>@drawable/dash_c</item>
        <item>@drawable/dash_d</item>
        <item>@drawable/dash_e</item>
        <item>@drawable/extras_a</item>
        <item>@drawable/extras_b</item>
    </integer-array>

    <string-array name="dash_descriptions">
        <item>Asistencia legal</item>
        <item>Perjuicios a la unidad</item>
        <item>Paramédico en moto</item>
        <item>Resp. civil terceros</item>
        <item>Gastos médicos y/o funerarios</item>
        <item>Barredora gratuita</item>
        <item>Paramédico sin costo</item>
    </string-array>

</resources>
