<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimaryGtt"
        tools:context=".ui.dashboard.mision.MisionFragmentGtt">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/textView43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/misi_n"
                    android:theme="@style/textTheme"
                    android:textSize="18sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/misiongtt"
                    android:layout_marginTop="32dp"
                    android:textSize="16sp"
                    android:theme="@style/textTheme"
                    android:id="@+id/contaclabel"
                    android:gravity="center" />

            <TextView
                    android:id="@+id/textView45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/visi_n"
                    android:theme="@style/textTheme"
                    android:textSize="18sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visiongtt"
                    android:layout_marginTop="32dp"
                    android:textSize="16sp"
                    android:theme="@style/textTheme"
                    android:id="@+id/contaclabel56"
                    android:gravity="center" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/valores"
                    android:theme="@style/textTheme"
                    android:textSize="18sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valoresgtt"
                    android:layout_marginTop="32dp"
                    android:textSize="16sp"
                    android:theme="@style/textTheme"
                    android:gravity="center" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>