<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryGtt"
        tools:context=".ui.dashboard.contact.ContactFragmentGtt">

    <!--View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/backdashgtt"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /-->

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView43"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/contacto_gtt"
            android:theme="@style/textTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentarios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp"
            android:textSize="16sp"
            android:theme="@style/textTheme"
            android:id="@+id/contaclabel"
            app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextContacto"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_marginStart="32dp"
            app:hintEnabled="false"
            android:layout_marginEnd="32dp"
            android:theme="@style/textInputTheme"
            android:layout_marginTop="4dp"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contaclabel">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextContactoText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="top|start"
                android:paddingEnd="10dp"
                android:paddingTop="8dp"
                android:paddingStart="10dp"
                android:hint="@string/mensjaegtt"
                android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/buttonEnviarContact"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:text="Enviar"
            style="@style/textButtonTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextContacto" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcontact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp"
            android:textSize="16sp"
            android:theme="@style/textTheme"
            android:id="@+id/contaclabel2"
            app:layout_constraintTop_toBottomOf="@+id/buttonEnviarContact" />

    <ImageView
            android:id="@+id/imageView10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/com_facebook_button_icon"
            app:layout_constraintEnd_toEndOf="@+id/contaclabel2"
            app:layout_constraintStart_toStartOf="@+id/contaclabel2"
            app:layout_constraintTop_toBottomOf="@+id/contaclabel2" />

    <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/web_gtt"
            android:theme="@style/textTheme"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/contaclabel2"
            app:layout_constraintStart_toStartOf="@+id/contaclabel2"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
            android:id="@+id/textView45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tel_gtt"
            android:textSize="16sp"
            android:theme="@style/textTheme"
            app:layout_constraintEnd_toEndOf="@+id/textView44"
            app:layout_constraintStart_toStartOf="@+id/textView44"
            app:layout_constraintTop_toBottomOf="@+id/textView44" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>