<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.bicisos.i7.bicisos.ui.login.LoginViewModelViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:background="#0d60a0"
            android:paddingBottom="8dp"
            tools:context=".ui.login.LoginViewModelFragment">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginTop="32dp"
                        android:padding="24dp"
                        android:src="@drawable/logogtta"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <TextView
                        android:id="@+id/textView34"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/backtutorial"
                        android:theme="@style/textTheme"
                        android:gravity="center"
                        android:padding="24dp"
                        android:text="@string/loginTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView34">

                    <Button
                            android:id="@+id/buttonBeneficios"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="8dp"
                            style="@style/textButtonTheme"
                            android:layout_weight="1"
                            android:text="@string/beneficios" />

                    <Button
                            android:id="@+id/buttonContrata"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            style="@style/textButtonTheme"
                            android:text="@string/contrata" />
                </LinearLayout>

                <TextView
                        android:id="@+id/textView35"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="64dp"
                        android:text="@string/sesion_gtt"
                        android:theme="@style/textTheme"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                <TextView
                        android:id="@+id/textView36"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/usuario"
                        android:theme="@style/textTheme"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView35"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextUser"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="32dp"
                        app:hintEnabled="false"
                        android:layout_marginEnd="32dp"
                        android:theme="@style/textInputTheme"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView36">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            android:hint="@string/hint_user"
                            android:text="@={ loginViewModel.userName }"
                            android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                        android:id="@+id/textView37"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/contrase_a"
                        android:theme="@style/textTheme"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/editTextUser"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editTextPassword"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:passwordToggleEnabled="true"
                        android:theme="@style/textInputTheme"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView37">

                    <com.google.android.material.textfield.TextInputEditText

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            android:hint="@string/hint_pass"
                            android:text="@={ loginViewModel.password }"
                            android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="Ingresar"
                        style="@style/textButtonTheme"
                        android:onClick="@{ () -> loginViewModel.loginAction() }"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>