<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="#000"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView30"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textColor="#fff"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/todo_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView31"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:theme="@style/textTheme"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="MAPA DE TALLERES"
            android:theme="@style/textTheme"
            android:id="@+id/textlabel"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView31"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/reportar"
            android:id="@+id/imageView7"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textlabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/todo_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView32"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:theme="@style/textTheme"
            android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>